# CppUtil

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
include/util/: bytes.h  collection.h  date_time.h  date_time_range.h  file.h  filesystem.h  functional.h  notify_value.h  numeric.h  process.h  signal.h  stacktraces.h  string.h  time.h
src/: bytes.h  date_time_range.cpp  file.cpp  filesystem.cpp  string.cpp  string.h  time.cpp
test/: collection_test.cpp  functional_test.cpp  time_test.cpp
